--- a/scss/partilals/_header.scss
+++ b/scss/partilals/_header.scss
@@ -14,13 +14,11 @@
 
     .main-nav{
       overflow: hidden;
-      height: auto;
       transition: height 0.4s;
       width: 100%;
 
       .header-sides{
         display: flex;
-        height: 100%;
         align-items: center;
         justify-content: space-between;
 
@@ -43,6 +41,8 @@
 
             @include xl{
               margin-left: 0;
+              border-bottom: 1px solid #333;
+              padding: 10px 0;
             }
           }
 
@@ -58,6 +58,7 @@
 
       .header-right{
         display: flex;
+        align-items: center;
 
         @include xl{
           display: block;
@@ -73,6 +74,12 @@
 
       .header-right>*:not(:last-child){
         margin-right: 40px;
+
+        @include xl{
+          border-bottom: 1px solid #333;
+          padding: 10px 0;
+          margin-right: 0;
+        }
       }
 
       .language-dropdown {
@@ -84,6 +91,7 @@
         padding: 8px 12px;
         background-color: #f0f0f0;
         cursor: pointer;
+        margin: 18px 0;
       }
 
       .language-list {
@@ -132,59 +140,27 @@
   }
 
   .nav-btn{
-    width: 30px;
-    height: 30px;
+    width: 29px;
+    height: 20px;
     position: absolute;
     right: 20px;
     top: 18px;
     display: none;
-    border: 1px solid #fff;
     background: transparent;
     border-radius: 5px;
     cursor: pointer;
+    background: url('../images/burger.svg') no-repeat;
 
     @include xl{
       display: block;
     }
   }
 
-  .nav-btn span,
-  .nav-btn span::before,
-  .nav-btn span::after{
-    height: 3px;
-    width: 20px;
-    background: #fff;
-    position: absolute;
-    border-radius: 15px;
-  }
+  .nav-hidden{
+    height: auto;
 
-  .nav-btn span{
-    top: 50%;
-    left: 50%;
-    margin-left: -10px;
-    margin-top: -1px;
-  }
-
-  .nav-btn span::before,
-  .nav-btn span::after{
-    content: "";
-    left: 0;
-  }
-
-  .nav-btn span::before{
-    top: -8px;
-  }
-
-  .nav-btn span::after{
-    bottom: -8px;
-  }
-
-  .nav-btn:hover{
-    transition: 0.2s;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-  }
-
-  .nav-btn:active{
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+    @include xl{
+      height: 0;
+    }
   }
 }
