--- a/styles/style.css
+++ b/styles/style.css
@@ -126,13 +126,11 @@ legend {
 }
 .header .header-row .main-nav {
   overflow: hidden;
-  height: auto;
   transition: height 0.4s;
   width: 100%;
 }
 .header .header-row .main-nav .header-sides {
   display: flex;
-  height: 100%;
   align-items: center;
   justify-content: space-between;
 }
@@ -155,6 +153,8 @@ legend {
 @media screen and (max-width: 1200px) {
   .header .header-row .main-nav .header-left .header-links .header-link {
     margin-left: 0;
+    border-bottom: 1px solid #333;
+    padding: 10px 0;
   }
 }
 .header .header-row .main-nav .header-left .header-links .header-link:hover {
@@ -164,6 +164,7 @@ legend {
 }
 .header .header-row .main-nav .header-right {
   display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 1200px) {
   .header .header-row .main-nav .header-right {
@@ -179,6 +180,13 @@ legend {
 .header .header-row .main-nav .header-right > *:not(:last-child) {
   margin-right: 40px;
 }
+@media screen and (max-width: 1200px) {
+  .header .header-row .main-nav .header-right > *:not(:last-child) {
+    border-bottom: 1px solid #333;
+    padding: 10px 0;
+    margin-right: 0;
+  }
+}
 .header .header-row .main-nav .language-dropdown {
   position: relative;
   display: inline-block;
@@ -187,6 +195,7 @@ legend {
   padding: 8px 12px;
   background-color: #f0f0f0;
   cursor: pointer;
+  margin: 18px 0;
 }
 .header .header-row .main-nav .language-list {
   position: absolute;
@@ -225,54 +234,29 @@ legend {
   background: url("../images/kg.svg") no-repeat 5px 50%;
 }
 .header .nav-btn {
-  width: 30px;
-  height: 30px;
+  width: 29px;
+  height: 20px;
   position: absolute;
   right: 20px;
   top: 18px;
   display: none;
-  border: 1px solid #fff;
   background: transparent;
   border-radius: 5px;
   cursor: pointer;
+  background: url("../images/burger.svg") no-repeat;
 }
 @media screen and (max-width: 1200px) {
   .header .nav-btn {
     display: block;
   }
 }
-.header .nav-btn span,
-.header .nav-btn span::before,
-.header .nav-btn span::after {
-  height: 3px;
-  width: 20px;
-  background: #fff;
-  position: absolute;
-  border-radius: 15px;
+.header .nav-hidden {
+  height: auto;
 }
-.header .nav-btn span {
-  top: 50%;
-  left: 50%;
-  margin-left: -10px;
-  margin-top: -1px;
-}
-.header .nav-btn span::before,
-.header .nav-btn span::after {
-  content: "";
-  left: 0;
-}
-.header .nav-btn span::before {
-  top: -8px;
-}
-.header .nav-btn span::after {
-  bottom: -8px;
-}
-.header .nav-btn:hover {
-  transition: 0.2s;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-.header .nav-btn:active {
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+@media screen and (max-width: 1200px) {
+  .header .nav-hidden {
+    height: 0;
+  }
 }
 
 .hero {
