--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @use "partilals/base";
 @use "partilals/header";
 @use "partilals/hero";
+@use "partilals/about-us";
 @use "partilals/directions";
 @use "partilals/services";
 @use "partilals/coordinates";
