--- a/scss/partilals/_directions.scss
+++ b/scss/partilals/_directions.scss
@@ -1,3 +1,5 @@
+@use "../var/mixins" as *;
+
 .directions{
   padding: 140px 0;
 
@@ -12,20 +14,29 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    gap: 20px;
+
+    @include xl{
+      justify-content: space-around;
+    }
 
     .direction-box{
-      width: 300px;
+      width: 260px;
+
+      @include xl{
+        width: 400px;
+      }
     }
 
     fieldset{
       border: 3px solid #0074BE;
       padding: 15px 20px;
-      width: 300px;
+      width: 100%;
       height: 100%;
 
       h3{
-        font-size: 23px;
-        margin-bottom: 73px;
+        font-size: 20px;
+        margin-bottom: 50px;
       }
       
       li{
