--- a/scss/partilals/_header.scss
+++ b/scss/partilals/_header.scss
@@ -59,6 +59,7 @@
       .header-right{
         display: flex;
         align-items: center;
+        margin-top: 10px;
 
         @include xl{
           display: block;
@@ -79,6 +80,7 @@
           border-bottom: 1px solid #333;
           padding: 10px 0;
           margin-right: 0;
+          margin-top: 10px;
         }
       }
 
