--- a/scss/partilals/_header.scss
+++ b/scss/partilals/_header.scss
@@ -2,6 +2,7 @@
 
 .header{
   background-color: #252525;
+  padding: 10px 0;
 
   .header-row{
     display: flex;
@@ -43,6 +44,7 @@
               margin-left: 0;
               border-bottom: 1px solid #333;
               padding: 10px 0;
+              font-size: 22px;
             }
           }
 
@@ -59,10 +61,11 @@
       .header-right{
         display: flex;
         align-items: center;
-        margin-top: 10px;
 
         @include xl{
           display: block;
+          margin-top: 10px;
+          font-size: 22px;
         }
 
         .header-gps:hover{
@@ -94,6 +97,10 @@
         background-color: #f0f0f0;
         cursor: pointer;
         margin: 18px 0;
+
+        @include xl{
+          font-size: 22px;
+        }
       }
 
       .language-list {
@@ -108,6 +115,10 @@
 
       .language-list li {
         padding: 8px 12px;
+
+        @include xl{
+          font-size: 22px;
+        }
       }
 
       .language-list li a {
@@ -142,8 +153,8 @@
   }
 
   .nav-btn{
-    width: 29px;
-    height: 20px;
+    width: 44px;
+    height: 30px;
     position: absolute;
     right: 20px;
     top: 18px;
