--- a/styles/style.css
+++ b/styles/style.css
@@ -454,11 +454,6 @@ legend {
   font-family: "Noto Serif", serif;
   margin-bottom: 50px;
 }
-@media screen and (max-width: 1024px) {
-  .services h2 {
-    font-size: 22px;
-  }
-}
 .services .slider-pagination {
   display: flex;
   margin-bottom: 20px;
@@ -639,6 +634,17 @@ legend {
   width: 50%;
   padding: 70px 30px;
   color: #fff;
+}
+.contacts-page .contacts-page-wrapper .contacts-page-sides .contacts-page-right .request-has-been-sent {
+  background-color: #0089EC;
+  border-radius: 20px;
+  padding: 10px 20px;
+  position: fixed;
+  top: 40px;
+  right: 40px;
+  color: #fff;
+  transform: translateX(200%);
+  transition: 0.5s;
 }
 .contacts-page .contacts-page-wrapper .contacts-page-sides .contacts-page-right p {
   margin-bottom: 5px;
