about us page is done

--- a/styles/style.css
+++ b/styles/style.css
@@ -681,4 +681,22 @@ legend {
   margin-top: 30px;
 }
 
+.about-us-page {
+  padding: 60px 0;
+}
+.about-us-page h2 {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+}
+.about-us-page .about-us-page-text h5 {
+  font-weight: 600;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 19px;
+}
+.about-us-page .about-us-page-text p {
+  color: #333;
+}
+
 /*# sourceMappingURL=style.css.map */
