--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,10 @@
 @use "partilals/coordinates";
 @use "partilals/footer";
 
-//contacts
+//contacts page
 
 @use "partilals/contacts";
+
+//about us page
+
+@use "partilals/about-us-page";
