--- a/styles/style.css
+++ b/styles/style.css
@@ -769,4 +769,122 @@ legend {
   display: none;
 }
 
+.instructions {
+  padding: 140px 0;
+  text-align: center;
+}
+.instructions h3 {
+  font-family: Noto Serif;
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 100px;
+}
+.instructions .instructions-boxes {
+  display: flex;
+  justify-content: space-between;
+  background: url("../images/Line 23.svg") no-repeat 0 50%;
+  background-size: 100%;
+}
+.instructions .instructions-boxes .instructions-box {
+  background-color: #fff;
+  padding: 0 20px;
+}
+@media screen and (max-width: 1024px) {
+  .instructions .instructions-boxes .instructions-box {
+    padding: 0 10px;
+  }
+}
+.instructions .instructions-boxes .instructions-box p {
+  width: 274px;
+}
+
+.quality {
+  padding: 140px 0;
+}
+.quality .quality-sides {
+  display: flex;
+  margin-bottom: 100px;
+}
+.quality .quality-sides .quality-left {
+  width: 50%;
+}
+.quality .quality-sides .quality-right {
+  width: 50%;
+  padding-left: 50px;
+  margin: auto 0;
+}
+.quality .quality-sides .quality-right h4 {
+  font-family: Noto Serif;
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.quality .quality-sides .quality-right p {
+  font-size: 23px;
+  font-weight: 300;
+}
+.quality .visit {
+  text-align: center;
+}
+.quality .visit h5 {
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+.quality .visit a {
+  font-size: 18px;
+}
+
+.staff {
+  margin-bottom: 80px;
+  background: linear-gradient(87deg, #C1D1E9 4.72%, #DDEAFA 86.45%, #C0D0E8 111.01%);
+}
+.staff .staff-sides {
+  display: flex;
+}
+.staff .staff-sides .staff-left {
+  width: 50%;
+}
+@media screen and (max-width: 1200px) {
+  .staff .staff-sides .staff-left {
+    width: 40%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .staff .staff-sides .staff-left {
+    width: 35%;
+  }
+}
+.staff .staff-sides .staff-right {
+  width: 50%;
+  margin: auto 0;
+}
+.staff .staff-sides .staff-right .staff-logo {
+  display: flex;
+  margin-bottom: 40px;
+}
+.staff .staff-sides .staff-right .staff-logo .staff-slogan {
+  display: flex;
+  align-items: center;
+}
+.staff .staff-sides .staff-right .staff-logo .staff-slogan span {
+  margin-left: 15px;
+  text-transform: uppercase;
+}
+.staff .staff-sides .staff-right h3 {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 28px;
+}
+.staff .staff-sides .staff-right p {
+  font-size: 28px;
+  margin-bottom: 50px;
+  font-weight: 300;
+}
+.staff .staff-sides .staff-right a {
+  padding: 15px 38px;
+  color: #0089EC;
+  font-size: 18px;
+  background-color: #fff;
+}
+
 /*# sourceMappingURL=style.css.map */
