--- a/styles/style.css
+++ b/styles/style.css
@@ -769,6 +769,183 @@ legend {
   display: none;
 }
 
+.hosting-hero {
+  padding: 60px 0 0;
+  background: linear-gradient(180deg, rgba(235, 235, 235, 0) 0%, #EFEFEF 100%);
+}
+.hosting-hero h1 {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.hosting-hero .payment-period {
+  margin-bottom: 70px;
+}
+.hosting-hero .payment-period span {
+  font-size: 20px;
+  color: #8D8D8D;
+  padding-right: 184px;
+  background: url("../images/Line 16.svg") no-repeat 100% 65%;
+}
+.hosting-hero .payment-period .payment-dates {
+  margin-left: 35px;
+  font-size: 20px;
+  text-decoration: underline;
+  transition: 0.3s ease;
+}
+.hosting-hero .payment-period .payment-date-active {
+  color: #0089EC;
+}
+.hosting-hero .payment-boxes {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 100px;
+}
+.hosting-hero .payment-boxes .payment-box-simple {
+  background: #000637 url("../images/s1mple_png-01-removebg-preview.png") no-repeat 100% 50%;
+}
+.hosting-hero .payment-boxes .payment-box-advance {
+  background: #000637 url("../images/advanced_png-01-removebg-preview.png") no-repeat 100% 50%;
+}
+.hosting-hero .payment-boxes .payment-box-corporate {
+  background: #000637 url("../images/corporate_png-01-removebg-preview.png") no-repeat 100% 50%;
+}
+.hosting-hero .payment-boxes .payment-box {
+  width: 32%;
+  color: #fff;
+  padding: 40px 30px;
+  border-radius: 15px;
+}
+.hosting-hero .payment-boxes .payment-box p {
+  color: #ABABAB;
+}
+.hosting-hero .payment-boxes .payment-box h3 {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  font-weight: 700;
+}
+.hosting-hero .payment-boxes .payment-box .price {
+  font-size: 28px;
+  font-family: "Montserrat", sans-serif;
+}
+.hosting-hero .payment-boxes .payment-box a {
+  margin-top: 25px;
+  border-radius: 4px;
+  background: #fff;
+  padding: 13px 59px;
+  color: #0074BE;
+  font-size: 18px;
+  display: inline-block;
+}
+.hosting-hero .services-types {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.hosting-hero .services-types a {
+  padding: 14px 0 14px 52px;
+}
+.hosting-hero .services-types .server {
+  background: url("../../images/Group 60.svg") no-repeat 0 50%;
+}
+.hosting-hero .services-types .hosting {
+  background: url("../../images/Group 62.svg") no-repeat 0 50%;
+}
+.hosting-hero .services-types .storage {
+  background: url("../../images/Group 64.svg") no-repeat 0 50%;
+}
+.hosting-hero .services-types .ssl {
+  background: url("../../images/Group 65.svg") no-repeat 0 50%;
+}
+.hosting-hero .services-types .services-type-active {
+  border-bottom: 3px solid #0089EC;
+}
+
+.services-details-3m {
+  display: none;
+}
+
+.services-details-6m {
+  display: none;
+}
+
+.services-details-12m {
+  display: none;
+}
+
+.services-details {
+  padding: 60px 0;
+  background: linear-gradient(180deg, rgba(235, 235, 235, 0) 0%, #EFEFEF 100%);
+}
+.services-details h3 {
+  font-size: 26px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+.services-details .services-details-sides {
+  display: flex;
+  justify-content: space-between;
+}
+.services-details .services-details-sides .services-details-left {
+  width: 67%;
+}
+.services-details .services-details-sides .services-details-left fieldset {
+  font-size: 20px;
+  border: 1px solid #333;
+  padding: 25px 20px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.services-details .services-details-sides .services-details-left fieldset legend {
+  padding: 0 15px;
+}
+.services-details .services-details-sides .services-details-left fieldset legend span {
+  color: #979797;
+  font-weight: 300;
+}
+.services-details .services-details-sides .services-details-left fieldset input {
+  background-color: transparent;
+}
+.services-details .services-details-sides .services-details-left fieldset .radios {
+  margin: 13px 0;
+}
+.services-details .services-details-sides .services-details-left fieldset .radios span {
+  font-size: 23px;
+  font-weight: 300;
+  color: #333;
+}
+.services-details .services-details-sides .services-details-right {
+  width: 30%;
+}
+.services-details .services-details-sides .services-details-right fieldset {
+  border: 1px solid #333;
+  padding: 25px 20px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.services-details .services-details-sides .services-details-right fieldset legend {
+  padding: 0 15px;
+  font-size: 20px;
+}
+.services-details .services-details-sides .services-details-right fieldset li {
+  margin: 20px 0;
+}
+.services-details .services-details-sides .services-details-right fieldset hr {
+  height: 1px;
+  background-color: #000;
+}
+.services-details .services-details-sides .services-details-right fieldset h3 {
+  margin: 20px 0;
+}
+.services-details .services-details-sides .services-details-right fieldset #total-price {
+  font-size: 23px;
+}
+
 .instructions {
   padding: 140px 0;
   text-align: center;
